--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
 
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
+      <maven.compiler.release>11</maven.compiler.release>
       <netty.version>4.1.51.Final</netty.version>
       <junit.version>4.13</junit.version>
   </properties>
@@ -47,5 +46,16 @@
           </dependency>
       </dependencies>
   </dependencyManagement>
-  
+
+  <build>
+      <pluginManagement>
+          <plugins>
+              <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>3.8.1</version>
+              </plugin>
+          </plugins>
+      </pluginManagement>
+  </build>
 </project>
