Added license and developer to pom file

--- a/pom.xml
+++ b/pom.xml
@@ -58,4 +58,18 @@
           </plugins>
       </pluginManagement>
   </build>
+
+  <licenses>
+      <license>
+          <name>Apache License, Version 2.0</name>
+          <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      </license>
+  </licenses>
+
+  <developers>
+      <developer>
+          <name>Paolo Patierno</name>
+          <email>ppatierno@live.com</email>
+      </developer>
+  </developers>
 </project>
