--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
       <maven.compiler.release>11</maven.compiler.release>
       <netty.version>4.1.51.Final</netty.version>
       <junit.version>4.13</junit.version>
+      <log4j.version>2.13.3</log4j.version>
   </properties>
 
   <dependencyManagement>
@@ -43,6 +44,16 @@
               <artifactId>junit</artifactId>
               <version>${junit.version}</version>
               <scope>test</scope>
+          </dependency>
+          <dependency>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-api</artifactId>
+              <version>${log4j.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.apache.logging.log4j</groupId>
+              <artifactId>log4j-core</artifactId>
+              <version>${log4j.version}</version>
           </dependency>
       </dependencies>
   </dependencyManagement>
