--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Checkout formula1-telemetry library
         uses: actions/checkout@v2
       - name: Build formula1-telemetry library with Maven
-        run: mvn package
+        run: mvn -B package
