--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
       <module>f1-telemetry</module>
       <module>f1-telemetry-monitor</module>
+      <module>f1-telemetry-enum-extractor</module>
   </modules>
 
   <properties>
